--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										#MySQL&ensp;#Python&ensp;#PythonFlask&ensp;#PyTorch&ensp;#JavaScript
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Github Repo</a></li>
+										<li><a href="https://github.com/PsyDak-Meng/VAE_Insight" class="button">Github Repo</a></li>
 									</ul>
 									
 								</article>
