--- a/Text_cluster.html
+++ b/Text_cluster.html
@@ -36,9 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li ><a href="index.html">Homepage</a></li>
-							<li><a href="Background.html">My Background</a></li>
-							<li class="active"><a href="index.html#DS">Data Science</a></li>
-							<li><a href="index.html#DL">Deep Learning</a></li>
+							<li class="active"><a href="DS.html">Data Science</a></li>
+							<li><a href="DL.html">Deep Learning</a></li>
 							
 						</ul>
 						<ul class="icons">
@@ -251,26 +250,12 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
+							<h2>Contact Me.</h2>
+							<p>
+								Hope you enjoyed my portfolio :) , if you have opportunities suitable for me, have interest in my work or me in general, please don't hesitate to reach out!
+							</p>
 						</section>
+						
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
