updated video link for Mybot

--- a/DL.html
+++ b/DL.html
@@ -41,7 +41,7 @@
 					
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Video</a>
+						<a href="https://1drv.ms/w/s!AjZUochJkOlgqXYAhg0Kk0qnDHN4?e=pcZzaM" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -170,10 +170,10 @@
 									<p>Finetuned Huggingface GPT-neo-x model with 20B parameters with QLoRA, 
 										reducing trainable parameters to 0.08% in Colab environment to enable faster training.<br> 
 										<br>
-										Deployed RAG with cosine-similarity dense passage retrieval to enable output optimization and reduce hallucination.
+										Deployed RAG with cosine-similarity retrieval to enable output optimization and reduce hallucination.
 										
 									<ul class="actions special">
-										<li><a href="" class="primary button">Demo Video</a></li>
+										<li><a href="https://youtu.be/pYqoHAsHARI" class="primary button">Demo Video</a></li>
 										<li><a href="https://github.com/PsyDak-Meng/My_bot/tree/master" class="button">Github Repo</a></li>
 									</ul>
 								</article>
@@ -277,7 +277,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">dakotameng@gmail.com</a></p>
+								<p><a href="#">Dakotameng.CM@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
