--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Video</a>
+						<a href="https://1drv.ms/w/s!AjZUochJkOlgqXYAhg0Kk0qnDHN4?e=pcZzaM" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -115,7 +115,7 @@
 									  </tr>
 									  <tr>
 										<td>Georgia Institute of Technology</td>
-										<td>Masters in Computational Science and Engineering</td>
+										<td>Computational Science and Engineering</td>
 										<td>Masters of Science (M.Sc)</td>
 									  </tr>
 									  <tr>
@@ -270,7 +270,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">dakotameng@gmail.com</a></p>
+								<p><a href="#">Dakotameng.CM@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
