--- a/DS.html
+++ b/DS.html
@@ -41,7 +41,7 @@
 					
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Video</a>
+						<a href="https://1drv.ms/w/s!AjZUochJkOlgqXYAhg0Kk0qnDHN4?e=pcZzaM" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -268,7 +268,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">dakotameng@gmail.com</a></p>
+								<p><a href="#">Dakotameng.CM@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
