added labor Power BI dashboard

--- a/DS.html
+++ b/DS.html
@@ -161,6 +161,23 @@
 								<article>
 									<header>
 										<span class="date">2023</span>
+										<h2><a href="Labor_BI.html" target="_blank" rel="noopener noreferrer">Construction Labor Statistics Dashboard</a>
+											<p><font size="3">&ensp;&ensp;&ensp;[Power BI]</font></p>
+										</h2>
+									</header>
+									<a href="Labor_BI.html" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/Labor_BI.png"  width=70% height="50%" alt="" /></a>
+									<p>Interactive data visualization for construction labor statistics.</br>
+										#Power BI
+									</p>
+									<ul class="actions special">
+										<li><a href="Labor_BI.html" class="primary button" target="_blank" rel="noopener noreferrer">Demo Video</a></li>
+										<li><a href="https://github.com/PsyDak-Meng/PowerBI_Dashboards" class="button" target="_blank" rel="noopener noreferrer">Github Repo</a></li>
+									</ul>
+									
+								</article>
+								<article>
+									<header>
+										<span class="date">2023</span>
 										<h2><a href="https://github.com/PsyDak-Meng/Inundation_Traffic_Simulation" target="_blank" rel="noopener noreferrer">Inundation Traffic Simulation</a></h2>
 									</header>
 									<a href="https://github.com/PsyDak-Meng/Inundation_Traffic_Simulation" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/traffic.jpg"  width=70% height="10%" alt="" /></a>
