added stock time series forecasting

--- a/DS.html
+++ b/DS.html
@@ -144,7 +144,7 @@
 									<header>
 										<span class="date">2023</span>
 										<h2><a href="https://github.com/PsyDak-Meng/VAE_Insight" target="_blank" rel="noopener noreferrer">VAE Insight </a>
-											<p><font size="3">&ensp;&ensp;&ensp;[An end-to end machine learning web application]</font></p>
+											<p><font size="3"><center>&ensp;&ensp;&ensp;[An end-to end machine learning web application]</center></font></p>
 										</h2>
 									</header>
 									<a href="https://github.com/PsyDak-Meng/VAE_Insight" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/vaers.jpg"  width=70% height="50%" alt="" /></a>
@@ -162,7 +162,7 @@
 									<header>
 										<span class="date">2023</span>
 										<h2><a href="Labor_BI.html" target="_blank" rel="noopener noreferrer">Construction Labor Statistics Dashboard</a>
-											<p><font size="3">&ensp;&ensp;&ensp;[Power BI]</font></p>
+											<p><center><font size="3">&ensp;&ensp;&ensp;[Power BI]</font></center></p>
 										</h2>
 									</header>
 									<a href="Labor_BI.html" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/Labor_BI.png"  width=70% height="50%" alt="" /></a>
@@ -172,6 +172,23 @@
 									<ul class="actions special">
 										<li><a href="Labor_BI.html" class="primary button" target="_blank" rel="noopener noreferrer">Demo Video</a></li>
 										<li><a href="https://github.com/PsyDak-Meng/PowerBI_Dashboards" class="button" target="_blank" rel="noopener noreferrer">Github Repo</a></li>
+									</ul>
+									
+								</article>
+								<article>
+									<header>
+										<span class="date">2023</span>
+										<h2><a href="https://medium.com/@dakotameng/cracking-the-stock-market-how-time-series-analysis-reveals-the-rhythm-of-stock-prices-985dd8853cce" target="_blank" rel="noopener noreferrer">Stock Price Time Series Forecasting</a>
+											<p><center><font size="3">&ensp;&ensp;&ensp;[Time Series Analysis]</font></center></p>
+										</h2>
+									</header>
+									<a href="Labor_BI.html" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/stock.jpg"  width=70% height="50%" alt="" /></a>
+									<p>IPredicted daily time series of individual stock price with Generalized Additive Model and ARMA models (ARIMA & ARIMA-GARCH) in R, then formed statistical reports.</br>
+										#R
+									</p>
+									<ul class="actions special">
+										<li><a href="https://medium.com/@dakotameng/cracking-the-stock-market-how-time-series-analysis-reveals-the-rhythm-of-stock-prices-985dd8853cce" class="primary button" target="_blank" rel="noopener noreferrer">Medium</a></li>
+										<li><a href="https://github.com/PsyDak-Meng/Time-Series-Analysis" class="button" target="_blank" rel="noopener noreferrer">Github Repo</a></li>
 									</ul>
 									
 								</article>
