--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								</table> -->
 								<div class="col-6 col-12-small">
 									<ul class="actions stacked">
-										<li><a href="#" class="button small fit" target="_blank" rel="noopener noreferrer">Full Resume</a></li>
+										<li><a href="https://github.com/PsyDak-Meng/My_Site.github.io/blob/master/FullResume%20CheTingMeng.pdf" class="button small fit" target="_blank" rel="noopener noreferrer">Full Resume</a></li>
 									</ul>
 								</div>
 	
