update work exp

--- a/DL.html
+++ b/DL.html
@@ -267,13 +267,13 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>935 Marietta St. NW #30318<br />
+								<p>811 Holmes St. NW #30318<br />
 								Atlanta, GA</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p>US: (470) 923-3934</br>
-									TW: (886) 905-200-863</a></p>
+								<p>US: (+1) 470-923-3934</br>
+									TW: (+886) 905-200-863</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
