--- a/DS.html
+++ b/DS.html
@@ -153,7 +153,7 @@
 										#MySQL&ensp;#Python&ensp;#PythonFlask&ensp;#PyTorch&ensp;#JavaScript
 									</p>
 									<ul class="actions special">
-										<li><a href="" class="primary button" target="_blank" rel="noopener noreferrer">Demo Video</a></li>
+										<li><a href="https://youtu.be/A25yyVlHtD8" class="primary button" target="_blank" rel="noopener noreferrer">Demo Video</a></li>
 										<li><a href="https://github.com/PsyDak-Meng/VAE_Insight" class="button" target="_blank" rel="noopener noreferrer">Github Repo</a></li>
 									</ul>
 									
@@ -292,13 +292,13 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>935 Marietta St. NW #30318<br />
+								<p>811 Holmes St. NW #30318<br />
 								Atlanta, GA</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p>US: (470) 923-3934</br>
-									TW: (886) 905-200-863</a></p>
+								<p>US: (+1) 470-923-3934</br>
+									TW: (+886) 905-200-863</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
